--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "Sedona",
   "private": true,
-  "description": "Личный проект «Sedona» от HTML Academy",
+  "description": "Личный проект «Sedona» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "10.2.5",
     "browser-sync": "2.26.14",
-    "gulp": "4.0.2",
+    "gulp": "^4.0.2",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "3.0.0",
+    "gulp-svgstore": "^9.0.0",
     "postcss": "8.2.8",
     "stylelint": "13.12.0",
-    "stylelint-config-htmlacademy": "0.1.4"
+    "stylelint-config-htmlacademy": "0.1.4",
+    "svgstore": "^3.0.1"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
