--- a/package.json
+++ b/package.json
@@ -1,43 +1,48 @@
 {
-  "name": "Sedona",
+  "name": "gulp-template",
+  "version": "1.0.0",
   "private": true,
-  "description": "Личный проект «Sedona» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
-    "autoprefixer": "^10.2.5",
-    "browser-sync": "^2.27.10",
-    "del": "^6.1.1",
+    "autoprefixer": "10.4.13",
+    "browser-sync": "2.27.10",
+    "del": "7.0.0",
     "gh-pages": "^5.0.0",
-    "gulp": "^4.0.2",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^9.0.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-svgstore": "^9.0.0",
-    "gulp-terser": "^2.1.0",
-    "gulp-webp": "^4.0.1",
-    "postcss": "^8.2.8",
-    "postcss-csso": "^6.0.1",
-    "sass": "^1.55.0",
-    "stylelint": "^13.12.0",
-    "stylelint-config-htmlacademy": "^0.1.4",
-    "svgstore": "^3.0.1"
+    "gulp": "4.0.2",
+    "gulp-html-bemlinter": "2.1.2",
+    "gulp-if": "3.0.0",
+    "gulp-libsquoosh": "1.1.2",
+    "gulp-plumber": "1.2.1",
+    "gulp-postcss": "9.0.1",
+    "gulp-sass": "5.1.0",
+    "gulp-stacksvg": "1.0.6",
+    "gulp-svgmin": "4.1.0",
+    "gulp-terser": "2.1.0",
+    "gulp-w3c-html-validator": "5.1.3",
+    "postcss": "8.4.19",
+    "postcss-csso": "6.0.1",
+    "postcss-scss": "4.0.5",
+    "postcss-url": "10.1.3",
+    "sass": "1.56.1",
+    "stylelint": "14.15.0",
+    "stylelint-config-htmlacademy": "1.1.2"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
-    "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp styles",
-    "start": "gulp",
+    "stylelint": "stylelint \"source/sass/**/*.scss\" --custom-syntax postcss-scss",
+    "w3c": "gulp validateMarkup --silent",
+    "bemlinter": "gulp lintBem --silent",
+    "lint": "npm run editorconfig && npm run stylelint && npm run w3c && npm run bemlinter",
+    "start": "gulp runDev",
+    "build": "gulp buildProd",
+    "preview": "gulp buildProd && gulp startServer",
     "deploy": "gh-pages -d build"
   },
   "browserslist": [
     "last 2 versions",
     "not dead",
-    "not ie <= 11"
+    "not op_mini all",
+    "not < 0.25%"
   ],
   "editorconfig-cli": [
     "*.json",
@@ -48,6 +53,7 @@
     "source/sass/**/*.scss"
   ],
   "engines": {
-    "node": "14.15.0"
-  }
+    "node": ">=16.13.0"
+  },
+  "type": "module"
 }
